--- a/templates/modal.mustache
+++ b/templates/modal.mustache
@@ -54,7 +54,7 @@
                     >
                         <i class="fa fa-linkedin"></i>
                     </a>
-                    <a  href="mailto:?body={{encodedurl}}"
+                    <a  href="mailto:?subject={{#str}} share_email_subject, local_sharecourse {{/str}}&body={{emailbody}}"
                         title="{{#str}} share_email, local_sharecourse {{/str}}"
                         class="btn mx-1"
                         style="background-color: #6c757d; color: white;"
