Modify language strings for email sharing

--- a/templates/modal.mustache
+++ b/templates/modal.mustache
@@ -55,7 +55,7 @@
                     >
                         <i class="fa fa-linkedin"></i>
                     </a>
-                    <a  href="mailto:?subject={{#str}} share_email_subject, local_sharecourse {{/str}}&body={{emailbody}}"
+                    <a  href="mailto:?subject={{emailsubject}}&body={{emailbody}}"
                         title="{{#str}} share_email, local_sharecourse {{/str}}"
                         class="btn mx-1"
                         style="background-color: #6c757d; color: white;"
